k8s/deploy-angular.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name:  angular-deployment
  labels:
    app: angular-app
spec:
  selector:
    matchLabels:
      app:  angular-app

  replicas: 2

  template:
    metadata: 
      labels:
        app: angular-app
    spec:
      containers:
      -  name: angular-app
         image: nouran10/angular-app
         ports:
          -  containerPort: 80
