k8s/deploy-spring.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-boot-deloyment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-boot-app
  template:
    metadata:
      labels:
        app: spring-boot-app
    spec:
      containers:
      - name: spring-boot-app
        image: nouran10/spring-app
        ports:
        - containerPort: 8081
