k8s/angular-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: angular-app-service
spec:
  type: NodePort
  selector:
    app:  angular-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
