k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-app-service
spec:
  type: NodePort
  selector:
    app: spring-boot-app
  ports:
    - name: http
      protocol: TCP
      port: 8081
      targetPort: 8081
      nodePort: 32170
