k8s/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-app-service
  labels:
    app: spring-service
spec:
  type: NodePort
  selector:
    app: spring-boot-app
  ports:
  - protocol: TCP
    name: http
    port: 8081
    targetPort: 8081
    nodePort: 30456
