k8s/ingress.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress 
metadata: 
  name: app-ingress 
spec: 
  ingressClassName: nginx 
  rules: 
  - http: 
      paths: 
      - path: / 
        pathType: Prefix 
        backend: 
          service: 
            name: angular-app-service 
            port: 
              number: 80 
      - path: /user 
        pathType: Prefix 
        backend: 
          service: 
            name: spring-boot-app-service 
            port: 
              number: 8081
